--- a/src/main/resources/templates/addTemplate/addActivity.html
+++ b/src/main/resources/templates/addTemplate/addActivity.html
@@ -24,7 +24,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">活动地点</label>
                 <div class="layui-input-block">
-                    <input type="text" name="place" lay-verify="required" lay-reqtext="用户名是必填项，岂能为空？" placeholder="请输入" autocomplete="off" class="layui-input">
+                    <input type="text" name="place"   autocomplete="off" class="layui-input">
                 </div>
             </div>
 
@@ -32,7 +32,7 @@
                 <div class="layui-inline">
                     <label class="layui-form-label">负责人</label>
                     <div class="layui-input-inline">
-                        <input type="tel" name="leader" lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="tel" name="leader" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
@@ -47,13 +47,13 @@
                 <div class="layui-inline">
                     <label class="layui-form-label">活动人数</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="personNum" lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="text" name="personNum"  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <label class="layui-form-label">开始时间</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="actime" id="actime"  placeholder="20xx.1.1" autocomplete="off" class="layui-input">
+                        <input type="text" name="actime" id="actime"   autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
