--- a/src/main/resources/templates/addTemplate/addGoods.html
+++ b/src/main/resources/templates/addTemplate/addGoods.html
@@ -11,7 +11,7 @@
 
 
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>表单集合演示</legend>
+            <legend>添加物资</legend>
         </fieldset>
 
         <form class="layui-form" th:action="@{/addGoods}" method="post">
@@ -21,21 +21,27 @@
                     <input type="text" name="name"  autocomplete="off" placeholder="请输入名称" class="layui-input">
                 </div>
             </div>
+
+            <div class="layui-form-item">
+                <label class="layui-form-label">数量</label>
+                <div class="layui-input-block">
+                    <input type="text" name="number"  autocomplete="off" class="layui-input">
+                </div>
+            </div>
+
             <div class="layui-form-item">
                 <label class="layui-form-label">提供者</label>
                 <div class="layui-input-block">
-                    <input type="text" name="source" lay-verify="required"  placeholder="请输入" autocomplete="off" class="layui-input">
+                    <input type="text" name="source"  autocomplete="off" class="layui-input">
                 </div>
             </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">用处</label>
                 <div class="layui-input-block">
-                    <input type="text" name="place" lay-verify="required" l placeholder="请输入" autocomplete="off" class="layui-input">
+                    <input type="text" name="place"  autocomplete="off" class="layui-input">
                 </div>
             </div>
-
-
 
 
                 <div class="layui-form-item">
@@ -44,11 +50,8 @@
                         <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                     </div>
                 </div>
-            </div>
         </form>
-
-
-
+            </div>
 
     </div>
 </div>
