--- a/src/main/resources/templates/addTemplate/addOutsider.html
+++ b/src/main/resources/templates/addTemplate/addOutsider.html
@@ -18,48 +18,52 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">姓名</label>
                 <div class="layui-input-block">
-                    <input type="text" name="name"  autocomplete="off" placeholder="请输入标题" class="layui-input">
+                    <input type="text" name="name"  placeholder="请输入姓名" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">身份证</label>
-                <div class="layui-input-block">
-                    <input type="text" name="idcard" lay-verify="required" lay-reqtext="身份证是必填项，岂能为空？" placeholder="请输入" autocomplete="off" class="layui-input">
+                <div class="layui-input-inline">
+                    <input type="text" name="idcard"  placeholder="请输入身份证"  class="layui-input">
                 </div>
             </div>
 
             <div class="layui-form-item">
-                <div class="layui-inline">
                     <label class="layui-form-label">手机</label>
                     <div class="layui-input-inline">
-                        <input type="tel" name="phone"  autocomplete="off" class="layui-input">
+                        <input type="tel" name="phone" class="layui-input">
                     </div>
-                </div>
-                <div class="layui-inline">
+            </div>
+            <div class="layui-form-item">
                     <label class="layui-form-label">时间</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="cometime" autocomplete="off" class="layui-input">
+                        <input type="text" name="cometime"  class="layui-input">
                     </div>
-                </div>
             </div>
 
             <div class="layui-form-item">
-                <div class="layui-inline">
                     <label class="layui-form-label">来处</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="source"  autocomplete="off" class="layui-input">
+                        <input type="text" name="source"   class="layui-input">
                     </div>
                 </div>
-                <div class="layui-inline">
+            <div class="layui-form-item">
                     <label class="layui-form-label">去处</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="place"  autocomplete="off" class="layui-input">
+                        <input type="text" name="place"   class="layui-input">
                     </div>
                 </div>
+            <div class="layui-form-item">
+                    <label class="layui-form-label">预计离开时间</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="leavetime"  class="layui-input">
+                    </div>
+                </div>
+
             <div class="layui-form-item layui-form-text">
                 <label class="layui-form-label">来干嘛</label>
                 <div class="layui-input-block">
-                    <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
+                    <textarea name="content" placeholder="请输入内容" class="layui-textarea"></textarea>
                 </div>
 
                 <div class="layui-form-item">
@@ -68,11 +72,8 @@
                         <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                     </div>
                 </div>
+            </div>
         </form>
-
-
-
-
     </div>
 </div>
 <script src="../layui.all.js"></script>
