--- a/src/main/resources/templates/addTemplate/addUser.html
+++ b/src/main/resources/templates/addTemplate/addUser.html
@@ -11,63 +11,57 @@
     <div class="layui-content">
         <div class="layui-row">
             <div class="layui-card">
-                <div class="layui-card-header">表单</div>
-                <form class="layui-form layui-card-body" method="post" th:action="@{/information}">
+                <div class="layui-card-header">居民信息</div>
+                <form class="layui-form layui-card-body" th:method="post" th:action="@{/information}">
                     <span th:text="${userMessage}"></span>
                   <div class="layui-form-item">
                     <label class="layui-form-label">姓名</label>
                     <div class="layui-input-block">
-                      <input type="text" name="name" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="name"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">性别</label>
                     <div class="layui-input-block">
-                      <input type="text" name="sex" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="sex"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">年龄</label>
                     <div class="layui-input-block">
-                      <input type="text" name="age" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="age"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">身份证</label>
                     <div class="layui-input-block">
-                      <input type="text" name="idcard" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="numberNew" name="idcard"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">住址</label>
                     <div class="layui-input-block">
-                      <input type="text" name="locale" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="locale"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">手机号码</label>
                     <div class="layui-input-block">
-                      <input type="text" name="phone" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="numberNew" name="phone"   class="layui-input">
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <label class="layui-form-label">出生日期</label>
                     <div class="layui-input-block">
-                      <input type="text" name="birthday" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                      <input type="text" name="birthday"   class="layui-input">
                     </div>
                   </div>
 
 
-                    <div class="layui-form-item" pane="">
-                        <label class="layui-form-label">单选框</label>
-                        <div class="layui-input-block">
-                            <input type="radio" name="userType" value="0" title="住户" checked="">
-                        </div>
-                    </div>
 
                   <div class="layui-form-item">
                     <div class="layui-input-block">
-                      <button class="layui-btn layui-btn-blue" lay-submit lay-filter="formDemo">立即提交</button>
+                      <button class="layui-btn layui-btn-blue" type="submit">立即提交</button>
                       <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                     </div>
                   </div>
