--- a/src/main/resources/templates/addresult.html
+++ b/src/main/resources/templates/addresult.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>错误结果</title>
 </head>
 <body>
 <p th:text="${res}"></p>
