--- a/src/main/resources/templates/detailTemplate/getErweima.html
+++ b/src/main/resources/templates/detailTemplate/getErweima.html
@@ -13,6 +13,10 @@
 <script type="text/javascript">
     function f() {
         var place = $("#place").val();
+        if(place == '')
+        {
+            place = 0;
+        }
         var url = '/geterweima/';
         $("#ewm").attr('src',url+place);
     }
