--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/layui.css">
     <link rel="stylesheet" href="css/admin.css">
     <link rel="icon" href="/favicon.ico">
-    <title>社区管理</title>
+    <title>社区疫情管理</title>
 </head>
 <body class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
@@ -37,9 +37,9 @@
                     <img src="images/logo.png" alt=""/>
                     <h1>社区管理</h1>
                     <p>
-                    <td id="account" th:if="${account !=null}" th:text="${account.id}"></td>
-                    <td th:if="${user!= null}" th:text="${user.name}"></td>
-                    <td th:if="${user!= null}" th:text="${user.status}"></td>
+                    账号id:<td id="account" th:if="${account !=null}" th:text="${account.id}"></td>
+                    姓名:<td th:if="${user!= null}" th:text="${user.name}"></td>
+                    状态:<td th:if="${user!= null}" th:text="${user.status}"></td>
                     </p>
 
                 </div>
@@ -61,14 +61,15 @@
                             <em>填写个人信息</em>
                         </a>
                         <dl class="layui-nav-child">
-                            <dd th:if="${user!= null && account.status !=3}"><a th:href="@{/addinformation}">信息</a></dd>
+                            <dd th:if="${account != null && account.status !=3}"><a th:href="@{/addinformation}">用户信息</a></dd>
                             <dd >
                                 <a th:href="@{/login}">登录页</a>
                             </dd>
-                            <dd th:if="${user!= null && account.status !=3 && outsider == null}"><a th:href="@{/addOutsider}">外来人员登记</a></dd>
+                            <dd th:if="${account != null && account.status !=3 && outsider == null}"><a th:href="@{/addOutsider}">外来人员信息</a></dd>
+                            <dd><a th:if="${user!= null}" th:href="@{|/userpost/${user.name}|}">反馈状态</a></dd>
                         </dl>
                     </li>
-                    <li class="layui-nav-item" th:if="${user!= null}">
+                    <li class="layui-nav-item" th:if="${account != null &&account.type >= 1}">
                         <a href="javascript:;">
                             <i class="layui-icon">&#xe612;</i>
                             <em>管理员模块</em>
@@ -82,11 +83,8 @@
                             <dd><a th:href="@{/getOutsiderAll}">外来人员列表</a></dd>
                             <dd><a th:href="@{/setewmPage}">生成二维码</a></dd>
                             <dd><a th:href="@{/getewmPage}">获取场所码</a></dd>
-                            <dd><a th:href="@{/getoperaterulepage}">权限管理</a></dd>
-
-
-<!--                            <dd><a href="views/operaterule.html">权限配置</a></dd>-->
-                            
+                            <dd th:if="${account.type >= 2}"><a th:href="@{/getoperaterulepage}">权限管理</a></dd>
+                            <dd><a th:href="@{/getflowall}">出入管理</a></dd>
                         </dl>
                     </li>
                 </ul>
