--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/layui.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="icon" href="/favicon.ico">
-    <title>管理后台</title>
+    <title>登录</title>
     <base target="_parent" />
 </head>
 <body class="login-wrap">
@@ -25,12 +25,19 @@
                     <span class="label-title">密码</span>
                 </label>
                 <div>
-                <tr th:text="${accountMessage}"></tr>
-                <tr th:text="${passwordMessage}"></tr>
+
             </div>
             </div>
             <button type="submit" class="login-button">登录<i class="ai ai-enter"></i></button>
+            <div class="layui-form-item">
+                <a th:href="@{/getregisterpage}">前往注册</a>
+            </div>
+            <div class="layui-form-item">
+                <tr th:text="${accountMessage}"></tr>
+                <tr th:text="${passwordMessage}"></tr>
+            </div>
         </form>
+
     </div>
 
 </body>
