--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,23 +2,89 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>账号注册</title>
+    <title>注册</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="../css/layui.css">
+    <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style>
+        html, body {width: 100%;height: 100%;overflow: hidden}
+        body {background: #009688;}
+        body:after {content:'';background-repeat:no-repeat;background-size:cover;-webkit-filter:blur(3px);-moz-filter:blur(3px);-o-filter:blur(3px);-ms-filter:blur(3px);filter:blur(3px);position:absolute;top:0;left:0;right:0;bottom:0;z-index:-1;}
+        .layui-container {width: 100%;height: 100%;overflow: hidden}
+        .admin-login-background {width:360px;height:300px;position:absolute;left:50%;top:40%;margin-left:-180px;margin-top:-100px;}
+        .logo-title {text-align:center;letter-spacing:2px;padding:14px 0;}
+        .logo-title h1 {color:#009688;font-size:25px;font-weight:bold;}
+        .login-form {background-color:#fff;border:1px solid #fff;border-radius:3px;padding:14px 20px;box-shadow:0 0 8px #eeeeee;}
+        .login-form .layui-form-item {position:relative;}
+        .login-form .layui-form-item label {position:absolute;left:1px;top:1px;width:38px;line-height:36px;text-align:center;color:#d2d2d2;}
+        .login-form .layui-form-item input {padding-left:36px;}
+        .captcha {width:60%;display:inline-block;}
+        .captcha-img {display:inline-block;width:34%;float:right;}
+        .captcha-img img {height:34px;border:1px solid #e6e6e6;height:36px;width:100%;}
+    </style>
 </head>
 <body>
-<div>
-    <img src="/geterweima/123">
-    <form method="post" th:action="@{/register}">
-        用户名:<input type="text" name="name" id="name" required>
-        密码:<input type="password" name="password" id="password" required>
-        邮箱:<input type="email" name="email" id="email" required>
-        <button type="submit" >注册</button>
-    </form>
-    账号情况:<tr th:text="${msg}"></tr>
-    跳转首页:<tr th:text="${target}"></tr>
-    账号异常:<tr th:text="${nameMessage}"></tr>
-    密码异常:<tr th:text="${passwordMessage}"></tr>
-    邮箱异常:<tr th:text="${emailMessage}"></tr>
+<div class="layui-container layui-anim layui-anim-upbit">
+    <div class="admin-login-background">
+        <div class="layui-form login-form">
+            <form class="layui-form" th:action="@{/register}" method="post">
+                <div class="layui-form-item logo-title">
+                    <h1>注册账号</h1>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-icon layui-icon-username" for="name"></label>
+                    <input type="text" name="name" lay-verify="required|account" placeholder="用户名" autocomplete="off" class="layui-input" >
 
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-icon layui-icon-password" for="password"></label>
+                    <input type="password" name="password" lay-verify="required|password" placeholder="密码" autocomplete="off" class="layui-input">
+
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-icon layui-icon-release" for="email"></label>
+                    <input type="email" name="email" lay-verify="required|email" placeholder="注册邮箱" autocomplete="off" class="layui-input" >
+
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" lay-submit="" >注册</button>
+                </div>
+            </form>
+            <p th:text="${nameMessage}"></p>
+            <p th:text="${passwordMessage}"></p>
+            <p th:text="${emailMessage}"></p>
+            <p th:text="${msg}">跳转系统页面</p>
+        </div>
+    </div>
 </div>
+<script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
+<script src="../layui.js"></script>
+<script src="../jquery.particleground.min.js" charset="utf-8"></script>
+<script>
+    layui.use(['form'], function () {
+        var form = layui.form,
+            layer = layui.layer;
+
+        // 登录过期的时候，跳出ifram框架
+        if (top.location != self.location) top.location = self.location;
+
+        // 粒子线条背景
+        $(document).ready(function(){
+            $('.layui-container').particleground({
+                dotColor:'#5cbdaa',
+                lineColor:'#5cbdaa'
+            });
+        });
+
+    })
+</script>
 </body>
 </html>
