--- a/src/main/resources/templates/views/feedback.html
+++ b/src/main/resources/templates/views/feedback.html
@@ -7,56 +7,68 @@
     <link rel="stylesheet" href="../css/layui.css">
     <link rel="stylesheet" href="../css/view.css"/>
     <link rel="icon" href="/favicon.ico">
-    <title>管理后台</title>
+    <title>反馈管理</title>
 </head>
 <body class="layui-view-body">
     <div class="layui-content">
         <div class="layui-page-header">
             <div class="pagewrap">
-                <span class="layui-breadcrumb">
-                  <a href="">首页</a>
-                  <a href="">用户</a>
-                  <a><cite>用户组</cite></a>
-                </span>
-                <h2 class="title">用户组</h2>
+                <h2 class="title">反馈列表</h2>
             </div>
         </div>
         <div class="layui-row">
             <div class="layui-card">
                 <div class="layui-card-body">
                     <div class="form-box">
-                        <tr>
-                            <th><a th:href="@{/Resolved}"><button class="layui-btn layui-btn-normal layui-btn-mini" type="button">已读</button></a></th>
-                            <th> <a th:href="@{/unResolved}"><button class="layui-btn layui-btn-normal layui-btn-mini" type="button">未读</button></a></th>
-                            <th><a target="_blank" href="/addfeedback" ><span class="layui-btn layui-btn-normal layui-btn-mini">添加</span></a></th>
-                        </tr>
+                        <fieldset class="table-search-fieldset">
+                            <legend>搜索信息</legend>
+                            <div style="margin: 10px 10px 10px 10px">
+                                <div class="layui-form-item">
+                                    <div class="layui-inline">
+                                        <label class="layui-form-label">条件</label>
+                                        <div class="layui-inline">
+                                            <select  id="sex" style="width: 100px;" class="layui-select">
+                                                <option value="1">用户名</option>
+                                            </select>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <input type="text" id="suffix" class="layui-input" style="width: 300px">
+                                        </div>
+                                        <div class="layui-inline">
+                                            <a href="/postList" id="res"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button></a>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <a  th:href="@{/Resolved}" ><span class="layui-btn layui-btn-normal layui-btn-mini">已读</span></a>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <a  th:href="@{/unResolved}" ><span class="layui-btn layui-btn-normal layui-btn-mini">未读</span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
                         <div class="layui-card-body ">
                           <table class="layui-table layui-form">
                             <thead>
                               <tr>
                                 <th>标题</th>
-                                <th>登录名</th>
-                                <th>地址</th>
+                                <th>姓名</th>
                                 <th>发表时间</th>
                                 <th>状态</th>
                                 <th>操作</th>
                             </tr></thead>
-                            <tbody th:each="map:${postListMap}">
+                            <tbody th:each="post:${postList}">
                               <tr>
-                                  <p hidden="hidden" id="postid" th:text="${map.post.id}"></p>
-                                  <td>
-                                      <a th:href="@{|/postdetail/${map.post.id}|}" th:text="${map.post.title}"></a>
-                                  </td>
-                                <td th:text="${map.user.name}">admin</td>
-                                <td th:text="${map.user.locale}">地址</td>
-                                  <td th:text="${#dates.format(map.post.createTime,'yyyy-MM-dd HH:mm:ss')}">2017-01-01 11:11:42</td>
+                                  <p hidden="hidden" id="postid" th:text="${post.id}"></p>
+                                  <td th:text="${post.title}"></td>
+                                <td th:text="${post.name}">admin</td>
+                                  <td th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2017-01-01 11:11:42</td>
                                 <td class="td-status">
-                                  <span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${map.post.status == 1?'已读':'未读'}">未读</span>
+                                  <span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${post.status == 1?'已读':'未读'}">未读</span>
                                 </td>
-                                  <td class="td-status">
-                                      <a target="_blank"  onclick="detail()"><span class="layui-btn layui-btn-normal layui-btn-mini">详情</span></a>
-                                      <a target="_blank" th:href="@{|/updatestatus/${map.post.id}/${map.post.status}|}" th:if="${map.post.status == 0}" ><span class="layui-btn layui-btn-normal layui-btn-mini">修改</span></a>
-                                      <a target="_blank" href="/addfeedback" ><span class="layui-btn layui-btn-normal layui-btn-mini">添加</span></a>
+                                  <td>
+                                      <span class="layui-btn layui-btn-normal layui-btn-mini" onclick="detail()">详情</span>
+                                      <span class="layui-btn layui-btn-normal layui-btn-mini" th:onclick="|deleteuser(${post.id});|">删除</span>
                                   </td>
                               </tr>
                             </tbody>
@@ -67,19 +79,29 @@
             </div>
         </div>
     </div>
-    <div class="digg" th:fragment="pagedemo">
-        <span class="disabled"> <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a></span>
-        <span class="current" th:href="@{${page.path}(current=1)}">1</span>
-        <a th:href="@{${page.path}(current=2)}">2</a>
-        <a th:href="@{${page.path}(current=3)}">3</a>
-        <a th:href="@{${page.path}(current=4)}">4</a>
-        <a th:href="@{${page.path}(current=5)}">5</a>
-        <a th:href="@{${page.path}(current=${page.total})}" >末页</a>
+    <div class="digg" >
+        <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a>
+        <a th:class="${page.current==1?'pagecolor':''}" th:href="@{${page.path}(current=1)}">1</a>
+        <a th:class="${page.current==2?'pagecolor':''}" th:href="@{${page.path}(current=2)}">2</a>
+        <a th:class="${page.current==3?'pagecolor':''}" th:href="@{${page.path}(current=3)}">3</a>
+        <a th:class="${page.current==4?'pagecolor':''}" th:href="@{${page.path}(current=4)}">4</a>
+        <a th:class="${page.current==5?'pagecolor':''}" th:href="@{${page.path}(current=5)}">5</a>
+        <a  th:href="@{${page.path}(current=${page.total})}" >末页</a>
         <a th:href="@{${page.path}(current=${page.current+1})}">
             &gt; </a></div>
     <script src="../layui.all.js"></script>
     <script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
+
+        function deleteuser(userid){
+            $.ajax({
+                url:'/deleteuser/'+userid,
+                type:'get',
+                success:function (data) {
+                    $("#userdata").html(data)
+                }
+            })
+        }
         function detail() {
             $.ajax({
                 type:'get',
@@ -90,6 +112,24 @@
                 }
             })
         }
+
+        $("#sex").change(function () {
+            var suffix = $("#suffix").val();
+            var op = $("#sex").val();
+            if(op == 1)
+                $("#res").attr("href","/getPostByName/"+suffix);
+        })
+
+        $("#suffix").blur(function () {
+            var suffix = $("#suffix").val();
+            if(suffix =='')
+            {
+                suffix=1;
+            }
+            var op = $("#sex").val();
+            if(op == 1)
+                $("#res").attr("href","/getPostByName/"+suffix);
+        })
     </script>
 
 </body>
