--- a/src/main/resources/templates/views/operaterule.html
+++ b/src/main/resources/templates/views/operaterule.html
@@ -5,18 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../css/layui.css">
     <link rel="stylesheet" href="../css/view.css"/>
-    <title></title>
+    <title>权限配置</title>
 </head>
-
 <body class="layui-view-body">
     <div class="layui-content">
         <div class="layui-page-header">
             <div class="pagewrap">
-                <span class="layui-breadcrumb">
-                  <a href="">首页</a>
-                  <a href="">用户</a>
-                  <a><cite>权限配置</cite></a>
-                </span>
                 <h2 class="title">权限配置</h2>
             </div>
         </div>
@@ -30,7 +24,6 @@
                             <div class="layui-inline">
                                 <a href="/getNormalList"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 普通用户</button></a>
                                 <a href="/getManageList"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 管理员</button></a>
-
                             </div>
                         </div>
                     </div>
@@ -54,14 +47,8 @@
                         <a><span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${account.type ==1?'管理员':'用户'}" ></span></a>
                     </td>
                     <td class="td-status">
-<!--                        <a target="_blank" th:href="@{|/Userdetail/${res.user.id}|}" ><span class="layui-btn layui-btn-normal layui-btn-mini">详情</span></a>-->
-                        <div class="layui-inline" style="width: 100px;" >
-                            <select  id="type" style="width: 100px;" class="layui-select">
-                                <option value="0">普通用户</option>
-                                <option value="1">管理员</option>
-                            </select>
-                        </div><span class="layui-btn layui-btn-normal layui-btn-mini" onclick="chtype()">修改</span>
-<!--                        <a th:href="@{|/deleteuser/${res.user.id}|}" ><span class="layui-btn layui-btn-normal layui-btn-mini">删除</span></a>-->
+                        <a th:if="${account.type == 0}" th:href="@{|/changeType/${account.id}/1|}"><span class="layui-btn layui-btn-normal layui-btn-mini" >修改成为管理员</span></a>
+                        <a th:if="${account.type == 1}" th:href="@{|/changeType/${account.id}/0|}"><span class="layui-btn layui-btn-normal layui-btn-mini" >修改成为用户</span></a>
                     </td>
                 </tr>
                 </tbody>
@@ -71,18 +58,6 @@
     <script src="layui.all.js"></script>
     <script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
 <script type="text/javascript">
-    function chtype() {
-        var type = $("#type").val();
-        var accountid = $("#accountid").text();
-        $.ajax({
-            type:'post',
-            url:'/changeType',
-            data:{id:accountid,type:type},
-            success:function (data) {
-                alert(data)
-            }
-        })
-    }
 </script>
 </body>
 </html>
