--- a/src/main/resources/templates/views/outsider.html
+++ b/src/main/resources/templates/views/outsider.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="../css/layui.css">
     <link rel="stylesheet" href="../css/view.css"/>
     <link rel="icon" href="/favicon.ico">
-    <title>管理后台</title>
+    <title>外来人员管理</title>
 </head>
 <body class="layui-view-body">
     <div class="layui-content">
         <div class="layui-page-header">
             <div class="pagewrap">
-                <span class="layui-breadcrumb">
-                  <a href="">首页</a>
-                  <a href="">用户</a>
-                  <a><cite>用户组</cite></a>
-                </span>
-                <h2 class="title">用户组</h2>
+                <h2 class="title">外来人员信息列表</h2>
             </div>
         </div>
         <div class="layui-row">
@@ -33,7 +28,7 @@
                                         <div class="layui-inline">
                                             <label class="layui-form-label">条件</label>
                                             <div class="layui-inline">
-                                                <select  id="sex" style="width: 100px;" class="layui-select">
+                                                <select  id="factor" style="width: 100px;" class="layui-select">
                                                     <option value="1">姓名</option>
                                                     <option value="2">来处</option>
                                                     <option value="3">身份证</option>
@@ -45,9 +40,6 @@
                                             <div class="layui-inline">
                                                 <a href="/getOutsiderAll" id="res"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button></a>
                                             </div>
-                                            <div class="layui-inline">
-                                                <a target="_blank" href="/addOutsider" ><span class="layui-btn layui-btn-normal layui-btn-mini">添加</span></a>
-                                            </div>
                                         </div>
                                     </div>
                             </div>
@@ -55,7 +47,7 @@
 
 
                         <div class="layui-card-body ">
-                          <table class="layui-table layui-form">
+                          <table class="layui-table layui-form" th:fragment="outrep" id="outdata">
                             <thead>
                               <tr>
                                 <th>ID</th>
@@ -64,19 +56,21 @@
                                 <th>来处</th>
                                 <th>去处</th>
                                 <th>加入时间</th>
+                                  <th>预计离开时间</th>
                                 <th>操作</th>
                             </tr></thead>
                             <tbody th:each="outlist:${outsiderList}">
                               <tr>
                                 <td id="outid" th:text="${outlist.id}">1</td>
-                                <td th:text="${outlist.name}">admin</td>
-                                <td th:text="${outlist.phone}">18925139194</td>
-                                <td th:text="${outlist.source}">113664000@qq.com</td>
-                                <td th:text="${outlist.place}">超级管理员</td>
-                                <td th:text="${outlist.cometime}">2017-01-01 11:11:42</td>
+                                <td th:text="${outlist.name}">name</td>
+                                <td th:text="${outlist.phone}">phone</td>
+                                <td th:text="${outlist.source}">source</td>
+                                <td th:text="${outlist.place}">place</td>
+                                <td th:text="${outlist.cometime}">cometime</td>
+                                  <td th:text="${outlist.leavetime}">cometime</td>
                                   <td class="td-status">
                                       <a href="#" onclick="detail()"><span class="layui-btn layui-btn-normal layui-btn-mini">详情</span></a>
-                                      <a th:href="@{|/deleteoutsider/${outlist.id}|}" ><span class="layui-btn layui-btn-normal layui-btn-mini">删除</span></a>
+                                      <span class="layui-btn layui-btn-normal layui-btn-mini" th:onclick="|deleteout(${outlist.id});|">删除</span>
 
                                   </td>
                               </tr>
@@ -88,19 +82,29 @@
             </div>
         </div>
     </div>
-    <div class="digg" th:fragment="pagedemo">
-        <span class="disabled"> <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a></span>
-        <span class="current" th:href="@{${page.path}(current=1)}">1</span>
-        <a th:href="@{${page.path}(current=2)}">2</a>
-        <a th:href="@{${page.path}(current=3)}">3</a>
-        <a th:href="@{${page.path}(current=4)}">4</a>
-        <a th:href="@{${page.path}(current=5)}">5</a>
-        <a th:href="@{${page.path}(current=${page.total})}" >末页</a>
+    <div class="digg" >
+        <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a>
+        <a th:class="${page.current==1?'pagecolor':''}" th:href="@{${page.path}(current=1)}">1</a>
+        <a th:class="${page.current==2?'pagecolor':''}" th:href="@{${page.path}(current=2)}">2</a>
+        <a th:class="${page.current==3?'pagecolor':''}" th:href="@{${page.path}(current=3)}">3</a>
+        <a th:class="${page.current==4?'pagecolor':''}" th:href="@{${page.path}(current=4)}">4</a>
+        <a th:class="${page.current==5?'pagecolor':''}" th:href="@{${page.path}(current=5)}">5</a>
+        <a  th:href="@{${page.path}(current=${page.total})}" >末页</a>
         <a th:href="@{${page.path}(current=${page.current+1})}">
             &gt; </a></div>
     <script type="text/javascript" src="../layui.all.js"></script>
     <script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
+        function deleteout(outid) {
+            $.ajax({
+                url:'/deleteoutsider/'+outid,
+                type: 'get',
+                success:function (data) {
+                    $("#uotdata").html(data)
+                }
+            })
+        }
+
 
         function detail() {
             $.ajax({
@@ -113,9 +117,9 @@
             })
         }
 
-            $("#sex").change(function () {
+            $("#factor").change(function () {
                 var suffix = $("#suffix").val();
-                var op = $("#sex").val();
+                var op = $("#factor").val();
                 if(op == 1)
                     $("#res").attr("href","/bynamegetoutsider/"+suffix);
                 if(op == 2)
@@ -126,7 +130,7 @@
 
             $("#suffix").blur(function () {
                 var suffix = $("#suffix").val();
-                var op = $("#sex").val();
+                var op = $("#factor").val();
                 if(op == 1)
                     $("#res").attr("href","/bynamegetoutsider/"+suffix);
                 if(op == 2)
