--- a/src/main/resources/templates/views/users.html
+++ b/src/main/resources/templates/views/users.html
@@ -5,20 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../css/layui.css">
-    <link rel="stylesheet" href="../css/view.css"/>
+    <link rel="stylesheet" href="../css/view.css">
     <link rel="icon" href="/favicon.ico">
-    <title>管理后台</title>
+    <title>用户信息管理</title>
 </head>
 <body class="layui-view-body">
     <div class="layui-content">
         <div class="layui-page-header">
             <div class="pagewrap">
-                <span class="layui-breadcrumb">
-                  <a href="">首页</a>
-                  <a href="">用户</a>
-                  <a><cite>用户组</cite></a>
-                </span>
-                <h2 class="title">用户组</h2>
+                <h2 class="title">用户列表</h2>
             </div>
         </div>
         <div class="layui-row">
@@ -44,13 +39,22 @@
                                         <div class="layui-inline">
                                             <a href="/patientList" id="res"><button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button></a>
                                         </div>
+                                        <div class="layui-inline">
+                                            <span class="layui-btn layui-btn-normal layui-btn-mini">高危</span>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <span class="layui-btn layui-btn-normal layui-btn-mini">中度</span>
+                                        </div>
+                                        <div class="layui-inline">
+                                            <span class="layui-btn layui-btn-normal layui-btn-mini">正常</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </fieldset>
                     </div>
                         <div class="layui-card-body ">
-                          <table class="layui-table layui-form">
+                          <table class="layui-table layui-form" th:fragment="userrsp" id="userdata">
                             <thead>
                               <tr>
                                 <th>ID</th>
@@ -64,26 +68,18 @@
                             </tr></thead>
                             <tbody th:each="res:${maplist}">
                               <tr >
-                                <td id="userid" th:text="${res.user.id}">1</td>
-                                <td th:text="${res.user.name}">admin</td>
-                                <td th:text="${res.user.phone}">18925139194</td>
-                                <td th:text="${res.account.email}">113664000@qq.com</td>
-                                <td th:text="${res.user.userType==1?'住户':'外来人员'}">超级管理员</td>
-                                <td th:text="${#dates.format(res.account.createtime,'yyyy-MM-dd HH:mm:ss')}">2017-01-01 11:11:42</td>
+                                <td th:text="${res.user.id}">id</td>
+                                <td th:text="${res.user.name}">name</td>
+                                <td th:text="${res.user.phone}">phone</td>
+                                <td th:text="${res.account.email}">email</td>
+                                <td th:text="${res.account.type==1?'管理员':'用户'}">type</td>
+                                <td th:text="${#dates.format(res.account.createtime,'yyyy-MM-dd HH:mm:ss')}">createtime</td>
                                 <td class="td-status">
                                     <a><span class="layui-btn layui-btn-normal layui-btn-mini" th:text="${res.user.status}"></span></a>
                                 </td>
                                   <td class="td-status">
                                       <a target="_blank" th:href="@{|/Userdetail/${res.user.id}|}" ><span class="layui-btn layui-btn-normal layui-btn-mini">详情</span></a>
-                                      <div class="layui-inline" style="width: 100px;" >
-                                          <select  id="grade" style="width: 100px;" class="layui-select">
-                                              <option value="感染">感染</option>
-                                              <option value="高危">高危</option>
-                                              <option value="中度">中度</option>
-                                              <option value="正常">正常</option>
-                                          </select>
-                                      </div><span class="layui-btn layui-btn-normal layui-btn-mini" onclick="chgrade()">修改</span>
-                                      <a th:href="@{|/deleteuser/${res.user.id}|}" ><span class="layui-btn layui-btn-normal layui-btn-mini">删除</span></a>
+                                      <span class="layui-btn layui-btn-normal layui-btn-mini" th:onclick="|deleteuser(${res.user.id});|">删除</span>
                                   </td>
                               </tr>
                             </tbody>
@@ -94,28 +90,26 @@
             </div>
         </div>
     </div>
-    <div class="digg" th:fragment="pagedemo">
-        <span class="disabled"> <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a></span>
-        <span class="current" th:href="@{${page.path}(current=1)}">1</span>
-        <a th:href="@{${page.path}(current=2)}">2</a>
-        <a th:href="@{${page.path}(current=3)}">3</a>
-        <a th:href="@{${page.path}(current=4)}">4</a>
-        <a th:href="@{${page.path}(current=5)}">5</a>
-        <a th:href="@{${page.path}(current=${page.total})}" >末页</a>
+    <div class="digg" >
+        <a th:href="@{${page.path}(current=${page.current-1})}">&lt;</a>
+        <a th:class="${page.current==1?'pagecolor':''}" th:href="@{${page.path}(current=1)}">1</a>
+        <a th:class="${page.current==2?'pagecolor':''}" th:href="@{${page.path}(current=2)}">2</a>
+        <a th:class="${page.current==3?'pagecolor':''}" th:href="@{${page.path}(current=3)}">3</a>
+        <a th:class="${page.current==4?'pagecolor':''}" th:href="@{${page.path}(current=4)}">4</a>
+        <a th:class="${page.current==5?'pagecolor':''}" th:href="@{${page.path}(current=5)}">5</a>
+        <a  th:href="@{${page.path}(current=${page.total})}" >末页</a>
         <a th:href="@{${page.path}(current=${page.current+1})}">
             &gt; </a></div>
     <script src="layui.all.js"></script>
     <script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
-        function chgrade(){
-            var userid = $("#userid").text();
-            var grade = $("#grade").val();
+
+        function deleteuser(userid){
             $.ajax({
-                url:'/updateStatus',
-                type:'post',
-                data:{userid:userid,status:grade},
+                url:'/deleteuser/'+userid,
+                type:'get',
                 success:function (data) {
-                    alert(data)
+                    $("#userdata").html(data)
                 }
             })
         }
